<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:hintEnabled="false"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_login"
            android:drawableLeft="@drawable/ic_login"
            android:drawablePadding="24dp"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:text="erick"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:hintEnabled="false"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_password"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="24dp"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:text="erick"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:hintEnabled="false"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_name"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="24dp"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            android:text="Erick"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:hintEnabled="false"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_surname"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="24dp"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            android:text="Medina"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:hintEnabled="false"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="24dp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"
            android:text="medvalmobile@gmail.com"
            />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/registration_Button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="24dp"
        android:textColor="@color/orange"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:background="@android:color/transparent"
        android:text="@string/register_button" />

</LinearLayout>

</ScrollView>
